set up basic css structure

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
-<html>
-<head>
-<%- js('application') %>
-</head>
-<body>
-</body>
+  <html>
+    <head>
+      <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scaleable=no">
+      <%- js('application') %>
+      <%- css('application') %>
+    </head>
+  <body>
+  </body>
 </html>
