--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
   <html>
     <head>
-      <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scaleable=no">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <%- js('application') %>
       <%- css('application') %>
     </head>
