--- a/assets/css/touch.styl
+++ b/assets/css/touch.styl
@@ -2,10 +2,10 @@
   -webkit-user-select: none
   -webkit-touch-callout: none
   -webkit-tap-highlight-color: transparent
+
+html
+  height: 100%
+
 body
-  height: 500px
+  height: 100%
   width: 100%
-img
-  position: absolute
-  top: 0
-  left: 0
